--- a/index.html
+++ b/index.html
@@ -6,6 +6,38 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-
+    <nav class="main-nav nav-menu">
+        <h5 class="left">PUERTO RICO AIRLINES</h3>
+        <button class="nav-item">HOME</button>
+        <button class="nav-item">FLIGHTS</button>
+        <button class="nav-item">SUPPORT</button>
+        <button class="nav-item">LOGIN</button>
+    </nav>
+    <section class="section ">
+      <div class="container">
+        <div class="box center-text">
+          <h2 class="box-header">Flights</h2>
+          <p class="left-align paragraph-bottom-padding">Come check out our sweet flights! Direct flights available daily!</p>
+          <button class="button">Let's Go</button>
+        </div>
+        <div class="box center-text">
+          <h2 class="box-header">Group Trips</h2>
+            <p class="left-align">We offer great group rates! For families with 4 members to huge gatherings with 50+!</p>
+            <button class="button">Group Rates</button>
+        </div>
+        <div class="box center-text">
+          <h2 class="box-header">Discount Flights</h2>
+          <p class="left-align">Discount flights available for individuals! Single chain filler tickets for low rates!</p>
+          <button class="button">Jump In</button>
+        </div>
+      </div>
+      <div class="section">
+        <div class="box center-text">
+        <h2 class="box-header">About Us</h2>
+        <p class="left-align">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <button class="big-button">Learn More</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
